force-app/main/default/objects/help_scout__Installation_Log__c/help_scout__Installation_Log__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>To store success or failure details while installing Help Scout app</description>
    <label>Installation Log</label>
</CustomObject>