force-app/main/default/objects/help_scout__Installation_Log__c/fields/help_scout__Debug_Flag__c.field-meta.xml
<CustomField>
    <fullName>help_scout__Debug_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The flag is meant to turn on the debug logging in the application.</description>
    <label>Debug Flag</label>
    <type>Checkbox</type>
</CustomField>