force-app/main/default/objects/help_scout__Installation_Log__c/fields/help_scout__Error_Code__c.field-meta.xml
<CustomField>
    <fullName>help_scout__Error_Code__c</fullName>
    <label>Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>